--- a/src/index.ejs
+++ b/src/index.ejs
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="main"><%- markup -%></div>
+    <script src="/js/vendor.js"></script>
     <script src="/js/bundle.js"></script>
   </body>
 </html>
