come to terms with webpack sass modularization

--- a/src/core/sass/foundation-sites.sass
+++ b/src/core/sass/foundation-sites.sass
@@ -1,6 +1,6 @@
 @import '~foundation-sites/scss/foundation'
 
-// @include foundation-grid
+@include foundation-grid
 // @include foundation-flex-grid
 @include foundation-global-styles
 @include foundation-typography
