--- a/src/core/sass/_settings.scss
+++ b/src/core/sass/_settings.scss
@@ -45,6 +45,10 @@
 // 1. Global
 // ---------
 
+$c1: #630B11;
+$c2: #1E1D1C;
+$c3: #000;
+
 $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
@@ -60,8 +64,8 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
-$body-background: $white;
-$body-font-color: $black;
+$body-background: $c2;
+$body-font-color: $white;
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
