--- a/src/components/presentation/AlbumThumb/AlbumThumb.sass
+++ b/src/components/presentation/AlbumThumb/AlbumThumb.sass
@@ -6,11 +6,14 @@
 
     +breakpoint(medium)
       +grid-col(4)
+      +grid-col-end()
+      margin-bottom: 2rem
 
   &__inner
     text-align: center
 
   h2
+    margin-top: 1rem
     line-height: 1.1
     color: $c1
     font-weight: bold
