--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Judo Heroes - A Universal JavaScript demo application with React</title>
+    <title>Universal Javascript with Slayer and Reaact</title>
     <% if (env === 'production') { %>
 			<link rel="stylesheet" type="text/css" href="/css/bundle.css">
     <% } %>
