--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universal Javascript with Slayer and Reaact</title>
+    <meta name="description" content="<%- meta[0] ? meta[0].title : '' -%>">
+    <title><%- meta[0] ? meta[0].title : '' -%></title>
     <% if (env === 'production') { %>
 			<link rel="stylesheet" type="text/css" href="/css/bundle.css">
     <% } %>
   </head>
   <body>
     <div id="main"><%- markup -%></div>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.2.2/pixi.min.js"></script> -->
     <script src="/js/vendor.js"></script>
     <script src="/js/bundle.js"></script>
   </body>
