--- a/src/index.ejs
+++ b/src/index.ejs
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="main"><%- markup -%></div>
+    <script src="/js/modernizr.js"></script>
     <script src="/js/bundle.js"></script>
   </body>
 </html>
