--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="<%- meta[0] ? meta[0].title : '' -%>">
-    <title><%- meta[0] ? meta[0].title : '' -%></title>
+    <%- head.title.toString() -%>
+    <%- head.meta.toString() -%>
     <% if (env === 'production') { %>
 			<link rel="stylesheet" type="text/css" href="/css/bundle.css">
     <% } %>
