update sample component

--- a/src/components/layout/Layout/Layout.sass
+++ b/src/components/layout/Layout/Layout.sass
@@ -1,3 +1,6 @@
 @import '../../../core/sass/all.core'
 @import '../../page/page'
 @import '../../presentation/presentation'
+
+.layout
+  color: $c3
