--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,6 +9,7 @@
     <% if (env === 'production') { %>
 			<link rel="stylesheet" type="text/css" href="/css/bundle.css">
     <% } %>
+    <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico">
   </head>
   <body>
     <div id="main"><%- markup -%></div>
